--- a/HW2.ipynb
+++ b/HW2.ipynb
@@ -212,10 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Фидбэк:\n",
+    "# 1.Соединить Python c БД по API. + 1 балл\n",
+    "# 2.Из Python запросить информацию, необходимую для пункта 3. +1 балла\n",
+    "# Следовадло бы также исполнить два запроса из ДЗ1 для даты начала и конца наблюдений, это позволит построить матрицу переходный вероятностей\n",
+    "# когортным методом.\n",
+    "# Плюс, неясно почему Вы выбрасываете действия Снят и Приостановлен -  они требуются для правильного вычисления времени, которое компании владели определенным рейтингом. \n",
+    "# 3.Написать функцию, которая строит матричные характеристики рейтинговых переходов. Аргументы функции: вид рейтинга, границы периода наблюдения. На выходе функция должна выдавать не только матрицу, но и значения аргументов. Привести иллюстрационный пример использования. \n",
+    "#  Попытка не предпинята. +0 баллов.\n",
+    "# 4. Предусмотреть исполнение SQL запроса из п.2 внутри функции из п. 3. Запрос должен храниться в выходных данных функции. \n",
+    "#  +0 балл.\n",
+    "# Текущая сумма: 2 балла."
+   ]
   }
  ],
  "metadata": {
@@ -234,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
